WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161255
The :enabled/:disabled selectors should only match elements that can be disabled.
https://bugs.webkit.org/show_bug.cgi?id=161255
Summary
The :enabled/:disabled selectors should only match elements that can be disab...
Andreas Kling
Reported
2016-08-26 11:19:39 PDT
We're failing imported/w3c/web-platform-tests/html/semantics/selectors/pseudo-classes/disabled.html because HTMLOutputElement can get incorrectly matched by :enabled and :disabled selectors.
Attachments
Patch
(10.14 KB, patch)
2016-08-26 11:21 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch
(8.30 KB, patch)
2016-08-26 13:22 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch
(10.67 KB, patch)
2016-08-26 13:25 PDT
,
Andreas Kling
cdumez
: review+
cdumez
: commit-queue-
Details
Formatted Diff
Diff
Moon lander
(10.66 KB, patch)
2016-08-26 14:17 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2016-08-26 11:21:57 PDT
Created
attachment 287126
[details]
Patch
Andreas Kling
Comment 2
2016-08-26 13:22:09 PDT
Created
attachment 287136
[details]
Patch
WebKit Commit Bot
Comment 3
2016-08-26 13:25:27 PDT
Attachment 287136
[details]
did not pass style-queue: ERROR: Source/WebCore/html/HTMLElement.cpp:52: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 4
2016-08-26 13:25:29 PDT
Created
attachment 287138
[details]
Patch
WebKit Commit Bot
Comment 5
2016-08-26 13:26:50 PDT
Attachment 287138
[details]
did not pass style-queue: ERROR: Source/WebCore/html/HTMLElement.cpp:52: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 6
2016-08-26 13:53:42 PDT
Comment on
attachment 287138
[details]
Patch r=me
Chris Dumez
Comment 7
2016-08-26 14:12:29 PDT
Comment on
attachment 287138
[details]
Patch style
Andreas Kling
Comment 8
2016-08-26 14:17:21 PDT
Created
attachment 287147
[details]
Moon lander
WebKit Commit Bot
Comment 9
2016-08-26 14:47:54 PDT
Comment on
attachment 287147
[details]
Moon lander Clearing flags on attachment: 287147 Committed
r205050
: <
http://trac.webkit.org/changeset/205050
>
WebKit Commit Bot
Comment 10
2016-08-26 14:47:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug