The :enabled/:disabled selectors should only match elements that can be disabled. <https://webkit.org/b/161255>

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/html/semantics/selectors/pseudo-classes/disabled-expected.txt:

Source/WebCore:

Per the HTML spec, only the following elements can be actually disabled:

    button, input, select, textarea, optgroup, option, menuitem, fieldset

Since HTMLOutputElement inherits from HTMLFormControlElement, it had some
misguided ideas about being disableable. This was causing it to get matched
by :enabled and :disabled selectors.

Test: imported/w3c/web-platform-tests/html/semantics/selectors/pseudo-classes/disabled.html

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::checkOne):
* cssjit/SelectorCompiler.cpp:
(WebCore::SelectorCompiler::addPseudoClassType):
* css/SelectorCheckerTestFunctions.h:
(WebCore::matchesDisabledPseudoClass):
(WebCore::matchesEnabledPseudoClass): Renamed from isEnabled/isDisabled. Now only allows
:enabled and :disabled selectors to match elements that are actually disableable.

* html/HTMLElement.h:
* html/HTMLElement.cpp:
(WebCore::HTMLElement::canBeActuallyDisabled):
(WebCore::HTMLElement::isActuallyDisabled): Added supporting functions for the aforementioned selectors.

* html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::parseAttribute): Don't care about disabled state
changes in elements that are not disableable in the first place.


Canonical link: https://commits.webkit.org/179426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205050 268f45cc-cd09-0410-ab3c-d52691b4dbfc